k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-dz2
spec:
  selector:
    app: otus-dz2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
