k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-dz2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /otusapp/lromanov/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: otus-dz2
                port:
                  number: 80
